# Forge-AI

./: .env.example  .gitignore  .gitleaks.toml  .lighthouserc.json  .pre-commit-config.yaml  .repomixignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM.md  HIRING_PLAN.md  M10-AUDIT-NOTE.md  M10-INTEGRATION-REPORT.md  M11-AUDIT-NOTE.md  M11-INTEGRATION-REPORT.md  M12-AUDIT-NOTE.md  M12-INTEGRATION-REPORT.md  M13-AUDIT-NOTE.md  M13-DOGFOOD-REPORT.md  M13-PILOT-SIGNOFF.md  M14-AUDIT-NOTE.md  M14-BUGS-FIXED.md  M15-CENTER-STATE-AUDIT.md  M16-AUDIT-NOTE.md  M16-WORKFLOW-SHELL.md  M17-AUDIT-NOTE.md  M17-PRODUCTION-GRADED-STAGES.md  M18-AUDIT-NOTE.md  M19-AUDIT-NOTE.md  M20-AUDIT-NOTE.md  M20-EXPERIENCE-HERO.md  M21-AUDIT-NOTE.md  M21-TYPECHECK-CLEANUP.md  M22-AUDIT-NOTE.md  M22-RUFF-CLEANUP.md  M3-INTEGRATION-REPORT.md  M4-INTEGRATION-REPORT.md  M5-AUDIT-NOTE.md  M5-INTEGRATION-REPORT.md  M6-AUDIT-NOTE.md  (+23 more)
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.forge_jwks/: forge_proxy_private.pem  forge_proxy_public.pem
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  a795c2f979da_initial_baseline.py  b1c2d3e4f5a6_phase_0_7_seed_schema.py  c3d4e5f6a7b8_f829_litellm_integration_tables.py  d4e5f6a7b8c9_f829_phase_c_violations.py  e5f6a7b8c9d0_f800_copilot_foundation.py  f021_step_58_stories.py  g5h6i7j8k9l0_step_55_credentials_webhooks.py  h6i7j8k9l0m1_step_56_workflows_status.py  i7j8k9l0m1n2_step_59_drop_violations_table.py  j8k9l0m1n2o3_step_62_settings_models.py  k1l2m3n4o5p6_step73_user_api_tokens_sessions.py  l2m3n4o5p6q7_step72_board_confirmations.py  p4_idx_001.py  p4_idx_002.py  p4_idx_003.py  p4_rls_copilot.py  step_75_p3_spend_records_001.py  step_75_p4_agent_virtual_key_001.py  step_77_p0_litellm_guardrail_assignments.py  step_78_f11_prompts.py  step_78_f12_rbac_hierarchy.py  step_78_f13_rag.py  step_78_f14_async.py  step_78_f15_observability.py  step_79_m2_cost_ledger_columns.py  step_80_m3_connector_activity.py  step_90_m5_security_report.py  step_91_m7_audit_chain_ref.py  step_92_m10_copilot_typing.py  step_97_diagrams.py  (+6 more)
backend/app/: __init__.py  main.py
backend/scripts/: _seed_helpers.py  _smoke_helpers.py  issue_dev_token.py  seed_agents.py  seed_architecture.py  seed_connectors.py  seed_ideation.py  seed_knowledge_graph.py  seed_litellm_guardrails.py  seed_org_knowledge.py  seed_projects.py  seed_settings.py  seed_stories.py  seed_workflows.py  seed_workspaces.py  test_agents_api.py  test_architecture_api.py  test_connectors_api.py  test_knowledge_api.py  test_litellm_proxy.py  test_onboarding_api.py  test_settings_api.py  test_workflows_api.py  verify_seed_counts.py
backend/seeds/: __init__.py  __main__.py
backend/tests/: conftest.py  test_agent_assignment.py  test_agent_registry.py  test_anti_patterns.py  test_approval_decide_wire.py  test_approval_expiry_scheduler.py  test_approval_phase_decorator.py  test_architecture_acceptance.py  test_architecture_approval.py  test_architecture_context_aware.py  test_architecture_core.py  test_architecture_e2e_gate.py  test_architecture_gate_enforcement.py  test_architecture_generator_kg.py  test_architecture_risk.py  test_architecture_security_report.py  test_architecture_standards.py  test_architecture_traceability_versioning.py  test_audit_completeness_invariant.py  test_audit_default_sink.py  test_audit_invariant.py  test_audit_stream.py  test_budget_guard.py  test_chaos_litellm.py  test_code_validator_subgraph.py  test_config.py  test_connector_activity.py  test_connector_lifecycle.py  test_connector_manager.py  test_copilot_api.py  test_copilot_audit_columns.py  test_copilot_budget.py  test_copilot_foundation.py  test_copilot_rls.py  test_copilot_security.py  test_copilot_service.py  test_copilot_streaming_chunks.py  test_cost_admission_invariant.py  test_cost_aggregator.py  test_cost_ledger_schema.py  (+53 more)
(+5156 files in other folders)
