[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-backend"
version = "0.2.0"
description = "Forge AI Backend (Phase 2: Foundation + M1 Substrate)"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Forge AI Team" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "B008"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]
"tests/**/*.py" = ["PLR2004", "B011"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
