[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-backend"
version = "0.2.0"
description = "Forge AI Backend (Phase 2: Foundation + M1 Substrate)"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Forge AI Team" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
# Make the `app` package importable when pytest is run from the backend/ root.
pythonpath = ["."]  # pytest ≥7 adds this dir to sys.path so `from app...` resolves

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
# PLC0415 (import-outside-top-level): Many services defer imports
#  to function bodies to avoid circular imports. Reordering every
#  callsite is out of scope for the M22 lint cleanup.
# PLR0915/911/912 (too-many-*): stylistic warnings on services
#  that grew large through M3-M20. Real fix is function extraction.
# SIM105 (suppressible-exception): try/except:pass often carry
#  explanatory comments — refactoring to contextlib.suppress
#  uniformly would lose per-instance docs.
# SIM115/117 (file/with-statement): not always safe to merge
#  when each context has distinct lifecycle semantics.
ignore = [
    "PLR0913",
    "PLR2004",
    "B008",
    "PLC0415",
    "SIM105",
    "SIM115",
    "SIM117",
    "PLR0911",
    "PLR0912",
    "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008", "E402"]
"app/main.py" = ["E402"]
"app/agents/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"app/services/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"app/integrations/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"app/api/v1/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"app/core/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"app/db/**/*.py" = ["PLR0915"]
"app/schemas/**/*.py" = ["PLR0915", "PLR0911", "PLR0912"]
"tests/**/*.py" = ["PLR2004", "B011", "PLC0415", "PLR0915", "PLR0911", "PLR0912"]
"alembic/**/*.py" = ["E501"]
"scripts/**/*.py" = ["PLR0915", "PLR0911"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
